# Project-Kintsugi

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_UPGRADE_NOTES.md  DESIGN.md  Dockerfile  FABLE_AUDIT.md  README.md  alembic.ini  docker-compose.seed.yml  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
deployments/multiverse-school/: .env.example  Dockerfile  SYSTEM_GUIDE.md  VALUES.json  bdi_starter.json  (+1 more)
kintsugi/: main.py
migrations/: env.py
scripts/: test_llm_integration.py
tests/: test_active_inference.py  test_active_inference_bdi.py  test_adapters_discord.py  test_adapters_email.py  test_adapters_shared.py  test_adapters_slack.py  test_adapters_webchat.py  test_api_extensions.py  test_bdi_coherence.py  test_bdi_package.py  test_bloom_adapter.py  test_calibration.py  test_capability_tree.py  test_cli.py  test_cognition_efe.py  test_cognition_model_router.py  test_cognition_orchestrator.py  test_config_settings.py  test_config_values_loader.py  test_config_values_schema.py  test_drift_detector.py  test_end_to_end.py  test_evolution.py  test_fast_classifier.py  test_framework_agents.py  test_framework_api.py  test_governance_consensus.py  test_governance_otel.py  test_integration_pipeline.py  test_integrations_mcp.py  test_integrations_spans.py  test_memory_bdi_bridge.py  test_memory_cma_stage1.py  test_memory_cma_stage2.py  test_memory_cma_stage3.py  test_memory_cold_archive.py  test_memory_embeddings.py  test_memory_org_isolation.py  test_memory_significance.py  test_memory_spaced.py  (+30 more)
(+128 files in other folders)
