[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kintsugi-engine"
version = "0.1.0"
description = "Kintsugi — prosocial agentic harness engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pgvector>=0.3,<1",
    "httpx>=0.28,<1",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "opentelemetry-api>=1.28,<2",
    "opentelemetry-sdk>=1.28,<2",
    "opentelemetry-exporter-otlp>=1.28,<2",
    "sentence-transformers>=3.3,<4",
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "celery[redis]>=5.4,<6",
    "rich>=13,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "httpx>=0.28,<1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
